<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Inicio.CreateAccountActivity">


    <include layout="@layout/actionbar_toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/activity_vertical_margin"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditextBlack"
                android:layout_marginTop="@dimen/edittex_margin_createaccount">


                <android.support.design.widget.TextInputEditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_name"
                    />

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditextBlack"
                android:layout_marginTop="@dimen/edittex_margin_createaccount">


                <android.support.design.widget.TextInputEditText
                    android:id="@+id/App"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_app"
                    />

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditextBlack"
                android:layout_marginTop="@dimen/edittex_margin_createaccount">


                <android.support.design.widget.TextInputEditText
                    android:id="@+id/Apm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_apm" />

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditextBlack"
                android:layout_marginTop="@dimen/edittex_margin_createaccount">


                <android.support.design.widget.TextInputEditText
                    android:id="@+id/password_create_account"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    />

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditextBlack"
                android:layout_marginTop="@dimen/edittex_margin_createaccount">


                <android.support.design.widget.TextInputEditText
                    android:id="@+id/confirmpassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_confirm_paswword"
                    android:inputType="textPassword" />

            </android.support.design.widget.TextInputLayout>

            <EditText
                android:id="@+id/fechaNac"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:inputType="textPersonName"
                android:hint="Fecha Nacimiento"
                android:theme="@style/EditextBlack"
                android:onClick="goDate"/>


            <Button
                android:id="@+id/joinUS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_button_create_Account"
                android:theme="@style/RaisedButtonDark"
                android:layout_marginTop="@dimen/margin_button"
                android:onClick="goRegister"/>

        </LinearLayout>
    </ScrollView>

</android.support.design.widget.CoordinatorLayout>